--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "lint:style": "./node_modules/stylelint/bin/stylelint.js \"**/src/**/*.{css,vue}\""
   },
   "dependencies": {
-    "@sampullman/fetch-api": "0.4.0",
-    "vue": "^3.1.5",
-    "vue-i18n": "^9.1.6",
-    "vue-router": "^4.0.10"
+    "@sampullman/fetch-api": "0.6.0",
+    "vue": "^3.2.26",
+    "vue-i18n": "^9.2.0-beta.25",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@intlify/eslint-plugin-vue-i18n": "^0.12.0",
-    "@samatech/postcss-basics": "^0.2.0",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.1.5",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-vue": "^7.15.0",
-    "postcss": "^8.3.6",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "tslib": "^2.3.0",
-    "vite": "^2.4.4",
-    "vite-plugin-components": "^0.13.2",
+    "@intlify/eslint-plugin-vue-i18n": "^1.2.0",
+    "@samatech/postcss-basics": "^0.4.2",
+    "@vitejs/plugin-vue": "^2.0.1",
+    "@vue/compiler-sfc": "^3.2.26",
+    "eslint": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-vue": "^8.2.0",
+    "postcss": "^8.4.5",
+    "stylelint": "^14.2.0",
+    "stylelint-config-standard": "^24.0.0",
+    "tslib": "^2.3.1",
+    "vite": "^2.7.6",
+    "unplugin-vue-components": "^0.17.10",
     "vite-plugin-vue-images": "^0.6.1"
   }
 }
