--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^1.4.0",
+    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@samatech/postcss-basics": "^0.4.2",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.2.31",
+    "@vue/eslint-config-typescript": "^10.0.0",
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-vue": "^8.5.0",
@@ -30,8 +35,8 @@
     "stylelint": "^14.6.1",
     "stylelint-config-standard": "^25.0.0",
     "tslib": "^2.3.1",
-    "vite": "^2.9.1",
     "unplugin-vue-components": "^0.18.5",
+    "vite": "^2.9.1",
     "vite-plugin-vue-images": "^0.6.1"
   }
 }
