--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@sampullman/fetch-api": "0.7.0",
     "vue": "^3.2.31",
-    "vue-i18n": "^9.2.0-beta.34",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@intlify/eslint-plugin-vue-i18n": "^1.4.0",
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@samatech/postcss-basics": "^0.4.2",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
